# IPTV

./: .gitignore  README.md  categories.yml  manual.m3u  pyproject.toml  run.py  sources.yml
.github/workflows/: refresh.yml
output/: iran-persian.m3u  report.json
src/: build.py  categorize.py  fetch.py  filter.py  m3u.py  validate.py
